crates/teamctl-ui/tests/snapshots/snapshots__quit_confirm_120x30.snap
---
source: crates/teamctl-ui/tests/snapshots.rs
expression: buffer_to_string(&buf)
---
┌AGENTS────────────────────┐┌DETAIL────────────────────────────────────────────────────────────────────────────────────┐
│        (no agents)       ││                    (select an agent on the left to follow its session)                   │
│                          ││                                                                                          │
│                          ││                                                                                          │
│                          ││                                                                                          │
│                          ││                                                                                          │
│                          ││                                                                                          │
│                          ││                                                                                          │
│                          ││                                                                                          │
│                          ││                                                                                          │
│                          ││                                                                                          │
│                          ││                                                                                          │
│                          ││             ┌confirm───────────────────────────┐                                         │
│                          ││             │     Quit teamctl-ui?  [y / n]    │                                         │
│                          ││             │                                  │                                         │
│                          ││             │                                  │                                         │
│                          │└─────────────└──────────────────────────────────┘─────────────────────────────────────────┘
│                          │┌MAILBOX───────────────────────────────────────────────────────────────────────────────────┐
│                          ││ Inbox    Sent                                                                            │
│                          ││                                     (select an agent)                                    │
│                          ││                                                                                          │
│                          ││                                                                                          │
│                          ││                                                                                          │
│                          ││                                                                                          │
│                          ││                                                                                          │
│                          ││                                                                                          │
│                          ││                                                                                          │
└──────────────────────────┘└──────────────────────────────────────────────────────────────────────────────────────────┘
Tab cycle panes  ·  / search · ⏎ open · @ send · q quit                                              ? help · t tutorial
                                                                                                   CPU 0% · RAM 0.0/0 GB
