crates/teamctl-ui/tests/snapshots/snapshots__roster_with_agents_120x30.snap
---
source: crates/teamctl-ui/tests/snapshots.rs
expression: buffer_to_string(&buf)
---
┌ROSTER────────────────────┐┌DETAIL · writing:manager──────────────────────────────────┐┌MAILBOX───────────────────────┐
│ *  manager               ││      (no scrollback yet — agent may be starting up)      ││ Inbox    Channel    Wire     │
│ @  worker-1              ││                                                          ││           (no DMs)           │
│ !  worker-2              ││                                                          ││                              │
│ x  critic                ││                                                          ││                              │
│ ?  scout                 ││                                                          ││                              │
│                          ││                                                          ││                              │
│                          ││                                                          ││                              │
│                          ││                                                          ││                              │
│                          ││                                                          ││                              │
│                          ││                                                          ││                              │
│                          ││                                                          ││                              │
│                          ││                                                          ││                              │
│                          ││                                                          ││                              │
│                          ││                                                          ││                              │
│                          ││                                                          ││                              │
│                          ││                                                          ││                              │
│                          ││                                                          ││                              │
│                          ││                                                          ││                              │
│                          ││                                                          ││                              │
│                          ││                                                          ││                              │
│                          ││                                                          ││                              │
│                          ││                                                          ││                              │
│                          ││                                                          ││                              │
│                          ││                                                          ││                              │
│                          ││                                                          ││                              │
│                          ││                                                          ││                              │
│                          ││                                                          ││                              │
└──────────────────────────┘└──────────────────────────────────────────────────────────┘└──────────────────────────────┘
Tab cycle panes  ·  / search · ⏎ open · @ send · q quit                                              ? help · t tutorial
