crates/teamctl-ui/tests/snapshots/snapshots__splash_120x30.snap
---
source: crates/teamctl-ui/tests/snapshots.rs
expression: buffer_to_string(&buf)
---
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                   ___           ___           ___           ___           ___           ___           ___              
                  /\  \         /\  \         /\  \         /\__\         /\  \         /\  \         /\__\             
                  \:\  \       /::\  \       /::\  \       /::|  |       /::\  \        \:\  \       /:/  /             
                   \:\  \     /:/\:\  \     /:/\:\  \     /:|:|  |      /:/\:\  \        \:\  \     /:/  /              
                   /::\  \   /::\~\:\  \   /::\~\:\  \   /:/|:|__|__   /:/  \:\  \       /::\  \   /:/  /               
                  /:/\:\__\ /:/\:\ \:\__\ /:/\:\ \:\__\ /:/ |::::\__\ /:/__/ \:\__\     /:/\:\__\ /:/__/                
                 /:/  \/__/ \:\~\:\ \/__/ \/__\:\/:/  / \/__/~~/:/  / \:\  \  \/__/    /:/  \/__/ \:\  \                
                /:/  /       \:\ \:\__\        \::/  /        /:/  /   \:\  \         /:/  /       \:\  \               
                \/__/         \:\ \/__/        /:/  /        /:/  /     \:\  \        \/__/         \:\  \              
                               \:\__\         /:/  /        /:/  /       \:\__\                      \:\__\             
                                \/__/         \/__/         \/__/         \/__/                       \/__/             
                                        v0.7.3  ·  (no team loaded)  ·  0 agents                                        
                                          Press `?` for help · `t` for tutorial
