crates/teamctl-ui/tests/snapshots/snapshots__stream_keys_banner_120x30.snap
---
source: crates/teamctl-ui/tests/snapshots.rs
expression: rendered
---
┌AGENTS────────────────────┐┌DETAIL · writing:manager  [STREAM-KEYS]───────────────────────────────────────────────────┐
│ *  manager               ││                      (no scrollback yet — agent may be starting up)                      │
│                          ││                                                                                          │
│                          ││                                                                                          │
│                          ││                                                                                          │
│                          ││                                                                                          │
│                          ││                                                                                          │
│                          ││                                                                                          │
│                          ││                                                                                          │
│                          ││                                                                                          │
│                          ││                                                                                          │
│                          ││                                                                                          │
│                          ││                                                                                          │
│                          ││                                                                                          │
│                          ││                                                                                          │
│                          ││                                                                                          │
│                          │└──────────────────────────────────────────────────────────────────────────────────────────┘
│                          │┌MAILBOX───────────────────────────────────────────────────────────────────────────────────┐
│                          ││ Inbox    Sent    Channel    Wire                                                         │
│                          ││                                         (no DMs)                                         │
│                          ││                                                                                          │
│                          ││                                                                                          │
│                          ││                                                                                          │
│                          ││                                                                                          │
│                          ││                                                                                          │
│                          ││                                                                                          │
│                          ││                                                                                          │
└──────────────────────────┘└──────────────────────────────────────────────────────────────────────────────────────────┘
● STREAM-KEYS → writing:manager   keystrokes forwarding to tmux pane   ·   Esc to exit                                  
/fixture                                                                                           CPU 0% · RAM 0.0/0 GB
